# kirigami-treeview-test

kirigami-treeview/: CMakeLists.txt  org.kde.ktreeviewtest.desktop  org.kde.ktreeviewtest.json  org.kde.ktreeviewtest.metainfo.xml
kirigami-treeview/android/: AndroidManifest.xml
kirigami-treeview/src/: CMakeLists.txt  itemmodeltest.cpp  itemmodeltest.h  ktreeviewtestconfig.kcfgc  main.cpp
kirigami-treeview/src/contents/ui/: About.qml  main.qml
qt6-treeview/: CMakeLists.txt  Main.qml  itemmodeltest.h  main.cpp
